# ChangeLog for app-editors/hexedit
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/ChangeLog,v 1.40 2007/10/03 12:18:22 angelos Exp $

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> -hexedit-1.2.10.ebuild:
  Cleanup

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org> hexedit-1.2.12.ebuild:
  alpha stable wrt #194418

  03 Oct 2007; Tom Gall <tgall@gentoo.org> hexedit-1.2.12.ebuild:
  stable on ppc64

  02 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  hexedit-1.2.12.ebuild:
  stable x86, bug 194418

  02 Oct 2007; Jeroen Roovers <jer@gentoo.org> hexedit-1.2.12.ebuild:
  Stable for HPPA (bug #194418).

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  hexedit-1.2.12.ebuild:
  ppc. stable

  02 Aug 2007; Christian Birchinger <joker@gentoo.org>
  hexedit-1.2.12.ebuild:
  Added sparc stable keyword

  01 Aug 2007; Christoph Mende <angelos@gentoo.org> hexedit-1.2.12.ebuild:
  Stable on amd64

  05 Jul 2007; Christoph Mende <angelos@gentoo.org> hexedit-1.2.10.ebuild,
  hexedit-1.2.12.ebuild:
  Fixed homepage and SRC_URI

*hexedit-1.2.12 (25 Jun 2007)

  25 Jun 2007; Christoph Mende <angelos@gentoo.org> metadata.xml,
  +hexedit-1.2.12.ebuild:
  Adding myself to metadata and version bump, thanks to Tim Stoakes

  16 Apr 2007; Fabian Groffen <grobian@gentoo.org> hexedit-1.2.10.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  05 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -hexedit-1.2.9.ebuild:
  QA: Removed unused versions.

  21 Nov 2005; Simon Stelling <blubb@gentoo.org> hexedit-1.2.10.ebuild:
  stable on amd64

  11 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> hexedit-1.2.10.ebuild:
  Stable on ppc.

  08 Nov 2005; Rene Nussbaumer <killerfox@gentoo.org> hexedit-1.2.10.ebuild:
  Stable on hppa.

  04 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org> hexedit-1.2.10.ebuild:
  Stable on sparc

  03 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> -hexedit-1.2.2.ebuild: