@@ -1,4 +1,4 @@
 DIST hexedit-1.2.12.src.tgz 65802 RMD160 76f30d62e5c4b18fdba60cf7852641ba2b547dbb SHA1 fee89e390945045fe6b74b5f07600a8e664c8b21 SHA256 bcffbf3d128516cc4e1da64485866fbb5f62754f2af8327e7a527855186ba10f
-EBUILD hexedit-1.2.12.ebuild 682 RMD160 fbf02a9a4d05af6b48f7b99ed3d9cd4412cf6349 SHA1 c392d628bc7b65fc36e6b6cc5c6b68d7064a3283 SHA256 fc94eaeaec934fed29cda254768903181355f1b7d2fdd42838db506c4432f964
-MISC ChangeLog 3971 RMD160 856623f8c08f4fe3c45dee56eefa170b0d47e4f5 SHA1 fa634d8c33ed06aa02181d325891cf62d48331a9 SHA256 4fd7ba748fe6fdb6429f6ab17f389e3d5d915bf4f0853baf01f1cec348f0d6be
+EBUILD hexedit-1.2.12.ebuild 632 RMD160 be1246c322dd16cf6e3561f505ae14058dbb5dc5 SHA1 9d7151becf30bc678f7aa42261f6471a1698d175 SHA256 aa5f275fbb85b83ff44f4fdef586fddcaca539f746a05c4913f1acb1e9154a36
+MISC ChangeLog 4066 RMD160 ec91a038cb8bad0c5a1ba26d9cfb2543e4955d62 SHA1 1eaf85529ae0d57fb7da48a370e73d5f864cf1d2 SHA256 a178eff5d84767d5b380b6836bdcb2e16de2748eb611ced1308aad375efa39d3
 MISC metadata.xml 257 RMD160 f829d1fd5c7ca4e9d680bd6a67ba7647e76e5850 SHA1 924504f4034f31fe01bc6cb5619456d4e33093c0 SHA256 46b055aefb12327935fd54c8ea02edb10100d8f860d2ca581ded422b258b5f97
