@@ -1,22 +1,22 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/hexedit-1.2.12.ebuild,v 1.10 2007/10/03 11:52:09 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/hexedit-1.2.12.ebuild,v 1.11 2009/02/17 16:12:25 angelos Exp $
 
 EAPI="prefix"
 
 DESCRIPTION="View and edit files in hex or ASCII"
-HOMEPAGE="http://people.mandriva.com/~prigaux/hexedit.html"
-SRC_URI="http://people.mandriva.com/~prigaux/${P}.src.tgz"
+HOMEPAGE="http://rigaux.org/hexedit.html"
+SRC_URI="http://rigaux.org/${P}.src.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris ~x86-solaris"
 IUSE=""
 
-DEPEND="sys-libs/ncurses"
+DEPEND=""
 RDEPEND=""
 
-S=${WORKDIR}/${PN}
+S="${WORKDIR}/${PN}"
 
 src_install() {
 	dobin hexedit || die "dobin failed"
