@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/hexedit
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/ChangeLog,v 1.40 2007/10/03 12:18:22 angelos Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/ChangeLog,v 1.41 2009/02/17 16:12:25 angelos Exp $
+
+  17 Feb 2009; Christoph Mende <angelos@gentoo.org> hexedit-1.2.12.ebuild:
+  Updated HOMEPAGE
 
   03 Oct 2007; Christoph Mende <angelos@gentoo.org> -hexedit-1.2.10.ebuild:
   Cleanup
